# agentpanel

./: .gitignore  AGENTS.md  GENESIS.md  README.md  agentpanel  pyproject.toml
.github/workflows/: ci.yml
src/agentpanel/: __init__.py  cli.py  mcp_approver.py  render.py
src/agentpanel/core/: __init__.py  adapter.py  approval_broker.py  config.py  consensus.py  deliberation.py  events.py  ftu.py  judge.py  judges_model.py  metrics.py  permissions.py  session.py  store.py  worktree.py
src/agentpanel/core/adapters/: __init__.py  claude_code.py  codex.py  cursor_agent.py  mock.py
src/agentpanel/shared/: dev_cycle.md
src/agentpanel/tui/: __init__.py  agent_setup.py  app.py  approval_modal.py  ftu_screen.py  session_view.py
tests/: conftest.py  test_accounts.py  test_agent_setup.py  test_approver.py  test_codex.py  test_consensus.py  test_deliberation.py  test_execution.py  test_ftu.py  test_ftu_screen.py  test_judges.py  test_metrics.py  test_permissions.py  test_stop.py  test_store.py  test_tui.py  test_worktree.py
