[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpanel"
version = "0.1.0"
description = "Local multi-agent control plane: a panel of coding agents that deliberate, converge, and execute on one shared repo."
requires-python = ">=3.9"
dependencies = [
    "textual>=0.60",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
judge = ["anthropic>=0.40"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
agentpanel = "agentpanel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentpanel = ["shared/*.md"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
